# Skribbl-Clone

./: README.md  game-scope.txt  websocket-test.html
skribbl-backend/: Cargo.toml
skribbl-backend/src/: main.rs  models.rs  scoring.rs  state.rs
skribbl-backend/src/utils/: color.rs  mod.rs  validation.rs
skribbl-backend/src/websocket/: chat.rs  drawing.rs  game.rs  mod.rs  rooms.rs
skribbl-frontend/: package-lock.json  package.json  tailwind.config.js
skribbl-frontend/src/: App.tsx
skribbl-frontend/src/components/: Chat.tsx  GameRoom.tsx  Lobby.css  Lobby.tsx  Scoreboard.tsx  WaitingRoom.css  WaitingRoom.tsx
skribbl-frontend/src/hooks/: useWebSocket.ts
skribbl-frontend/src/services/: api.ts
skribbl-frontend/src/types/: game.ts
skribbl-frontend/src/utils/: session.ts  websocket-manager.ts
