[package]
name = "skribbl-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
dashmap = "5.5"
tokio-tungstenite = "0.20"
futures-util = "0.3"
rand = "0.8"
rand_core = "0.6"
chrono = { version = "0.4", features = ["serde"] }

[package.metadata.cargo-watch]
delay = 1
clear = true